k8s/deployment-spa-next.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brxm-spa-next
  labels:
    app: brxm-spa-next
spec:
  replicas: 2
  selector:
    matchLabels:
      app: brxm-spa-next
  template:
    metadata:
      labels:
        app: brxm-spa-next
    spec:
      hostAliases:
        - ip: "192.168.64.2"
          hostnames:
            - "brxm.local"
      containers:
        - name: brxm-spa-next
          image: bloomreach/xm-next-example
          ports:
            - containerPort: 3000
