k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brxm-cms-site
  labels:
    app: brxm-cms-site
spec:
  replicas: 2
  selector:
    matchLabels:
      app: brxm-cms-site
  template:
    metadata:
      labels:
        app: brxm-cms-site
    spec:
      hostAliases:
        - ip: "192.168.64.2"
          hostnames:
            - "brxm.local"
      containers:
#        - name: brxm-gateway
#          image: bloomreach/xm-gateway
#          ports:
#            - containerPort: 9090
        - name: brxm-cms-site
          image: bloomreach/xm-example-k8s-project
          ports:
            - containerPort: 8080
