k8s/deployments-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-next
  labels:
    app: frontend-next
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-next
  template:
    metadata:
      labels:
        app: frontend-next
    spec:
      hostAliases:
        - ip: "192.168.64.2"
          hostnames:
            - "brxm.local"
      containers:
        - name: frontend-next
          image: bloomreach/xm-next-example
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-react
  labels:
    app: frontend-react
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-react
  template:
    metadata:
      labels:
        app: frontend-react
    spec:
      containers:
        - name: frontend-react
          image: bloomreach/xm-react-example
          ports:
            - containerPort: 3000
