k8s/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brxm-cms-site
  labels:
    app: brxm-cms-site
spec:
  replicas: 2
  selector:
    matchLabels:
      app: brxm-cms-site
  template:
    metadata:
      labels:
        app: brxm-cms-site
    spec:
      hostAliases:
        - ip: "192.168.64.2"
          hostnames:
            - "brxm.local"
      containers:
        - name: brxm-cms-site
          image: bloomreach/xm-example-k8s-project
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /site/ping/
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 20
          readinessProbe:
            httpGet:
              path: /site/ping/
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 20
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-next
  labels:
    app: frontend-next
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-next
  template:
    metadata:
      labels:
        app: frontend-next
    spec:
      hostAliases:
        - ip: "192.168.64.2"
          hostnames:
            - "brxm.local"
      containers:
        - name: frontend-next
          image: bloomreach/xm-next-example
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-react
  labels:
    app: frontend-react
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-react
  template:
    metadata:
      labels:
        app: frontend-react
    spec:
      containers:
        - name: frontend-react
          image: bloomreach/xm-react-example
          ports:
            - containerPort: 3000
