k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brxm-cms-site
  labels:
    app: brxm-cms-site
spec:
  selector:
    app: brxm-cms-site
  ports:
    - name: brxm-cms-site
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: brxm-gateway
      protocol: TCP
      port: 9090
      targetPort: 9090
