k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: brxm-cms-site
  labels:
    app: brxm-cms-site
spec:
  selector:
    app: brxm-cms-site
  ports:
    - name: brxm-cms-site
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: brxm-spa-next
  labels:
    app: brxm-spa-next
spec:
  selector:
    app: brxm-spa-next
  ports:
    - name: brxm-spa-next
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: brxm-spa-react
  labels:
    app: brxm-spa-react
spec:
  selector:
    app: brxm-spa-react
  ports:
    - name: brxm-spa-react
      protocol: TCP
      port: 3000
      targetPort: 3000
